2011-07-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-text-html-renderer): Doc fix.

	* gnus-msg.el (gnus-bug): Fix the MML tag.

	* pop3.el (pop3-open-server): -ERR is a valid response to CAPA.

2011-07-05  Daiki Ueno  <ueno@unixuser.org>

	* gnus-start.el (gnus-get-unread-articles): Don't connect to the
	secondary methods if started with `gnus-no-server'.

2011-07-05  Juanma Barranquero  <lekktu@gmail.com>

	* message.el (message-return-action): Fix typo in docstring.

2011-07-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-read-ephemeral-bug-group): Allow fetching several
	bug reports at once.

	* nnimap.el (nnimap-request-scan): Say that splitting has finished.

2011-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndraft.el: Require gnus-group.
	(nndraft-request-list): Declare.

	* nndraft.el (nndraft-update-unread-articles): Don't show group having
	no unread article unless it matches gnus-permanently-visible-groups.

	* nndraft.el (nndraft-update-unread-articles): New function.
	(nndraft-request-associate-buffer): Use it to update the number of
	unread articles for the nndraft groups in the group buffer when saving
	or killing a draft message.

2011-07-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-read-ephemeral-bug-group): Bind the coding
	systems to binary before writing and reading the mbox files.

	* gnus.el (gnus-summary-line-format): Link to the info node for %U
	instead of trying to list them all (bug#8978).

2011-07-03  Wolfgang Jenkner  <wjenkner@inode.at>  (tiny change)

	* pop3.el (pop3-open-server): Use :end-of-capability.

2011-07-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): Make sure that
	the id is always a number.

	* dgnushack.el (debbugs-summary-mode): Shut up compiler about debbugs.

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): Hook into
	debbugs mode, if possible.
